# job-hunter

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  profile.yaml.example  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  scrape.yml
data/: .gitkeep  jobs.json
scrapers/: __init__.py  base.py  hackernews.py  remoteok.py  utils.py
scripts/: __init__.py  generate_email.py  match_score.py  send_email.py
tests/: conftest.py  test_hackernews.py  test_match_score.py  test_remoteok.py  test_utils.py
